2010-09-20  Nico Weber  <thakis@chromium.org>

Reviewed by James Robinson.

        [chromium] Trivial clang warning fix
        https://bugs.webkit.org/show_bug.cgi?id=46143

        * src/WebFileSystemCallbacksImpl.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@67919 bbb929c8-8fbe-4397-9dbb-9b2b20218538