third_party/WebKit/WebKit/chromium/src/WebFileSystemCallbacksImpl.h
@@ -44,7 +44,7 @@ class AsyncFileSystemCallbacks;
 namespace WebKit {
 
 struct WebFileInfo;
-class WebFileSystemEntry;
+struct WebFileSystemEntry;
 class WebString;
 
 class WebFileSystemCallbacksImpl : public WebFileSystemCallbacks {
